<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dip"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tip_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prompt"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tip_message"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:text="@string/exit_app"
                android:textColor="@android:color/black"
                android:textSize="@dimen/FourteenTextSize" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.2dip"
            android:background="#4fc7c9cb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/tip_negative_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:padding="15dp"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                android:textSize="@dimen/FourteenTextSize" /><!--android:background="@drawable/alertdialog_left_selector"-->

            <LinearLayout
                android:layout_width="0.2dp"
                android:layout_height="match_parent"
                android:background="#4fc7c9cb" />

            <Button
                android:visibility="gone"
                android:id="@+id/tip_neutral_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tip_btn_select"
                android:padding="15dp"
                android:text="@string/dismiss"
                android:textColor="@android:color/black"
                android:textSize="@dimen/FourteenTextSize" /><!--android:background="@drawable/middle_btn_select"-->

<!--                android:background="@drawable/tip_btn_select"
-->
            <Button
                android:id="@+id/tip_positive_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:padding="15dp"
                android:text="@string/confirm"
                android:textColor="@android:color/black"
                android:textSize="@dimen/FourteenTextSize" /><!--android:background="@drawable/alertdialog_right_selector"-->
        </LinearLayout>

</LinearLayout>